--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <p id="linetext1"> 👉🏻 If beauty were time, you’d be eternity 💗,</p>
 
-        <p id="linetext2"> 👉🏻 I swear someone stole the stars from the sky, <br> &nbsp; &nbsp;  and put them in your eyes 👀</p>
+        <p id="linetext2"> 👉🏻 I swear someone stole the stars from the sky  and put them in your eyes 👀</p>
 
         <img id="can1" src="/propose.png">
 
