--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>will u be my valentine ? 😉</title>
+    <title>will u be my valentine ? </title>
 
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");
@@ -146,7 +146,7 @@
 
         <img id="can1" src="/propose.png">
 
-        <p id="can">will u be my valentine?</p>
+        <p id="can">will u be my valentine ? 😉 </p>
 
         <button id="yes">Yes</button>
 
